--- a/card-game/package.json
+++ b/card-game/package.json
@@ -21,17 +21,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "core-js": "^2.6.9",
     "@nativescript/angular": "~10.0.0",
     "@nativescript/core": "rc",
     "@nativescript/theme": "~2.2.1",
+    "core-js": "^2.6.9",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.5.5",
     "tslib": "1.10.0",
